kubernetes/deploy-application.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookclub-api-database
  labels:
    app: bookclub
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: bookclub
    tier: database
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: bookclub-api
  labels:
    app: bookclub
spec:
  ports:
    - port: 80
  selector:
    app: bookclub
    tier: api
  clusterIP: None
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookclub-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true" # Enables cors headers
    nginx.ingress.kubernetes.io/auth-url: "http://jwt-validate.kube-system.svc.cluster.local/jwt/check"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: $BASE_URL
      http:
        paths:
          - path: /api
            backend:
              serviceName: bookclub-api
              servicePort: 80  
  tls:
    - hosts:
        - $BASE_URL
      secretName: letsencrypt-cert-$BASE_URL # Stores cert under this name
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bookclub-database
  labels:
    app: bookclub
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookclub
      tier: database
  template:
    metadata:
      labels:
        app: bookclub
        tier: database
    spec:
      containers:
        - name: bookclub-database
          image: kartoza/postgis:12.§
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: database-data
              subPath: "postgis" # Adds sub path becomes Hetzner volumes have a lost+found folder.
          ports:
            - containerPort: 5432
              name: database
          readinessProbe:
            exec:
              command:
                - "pg_isready"
            initialDelaySeconds: 5
      volumes:
        - name: database-data
          persistentVolumeClaim:
            claimName: bookclub-database-data
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bookclub-api
  labels:
    app: bookclub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookclub
      tier: api
  template:
    metadata:
      labels:
        app: bookclub
        tier: api
    spec:
      containers:
        - name: bookclub-api
          image: $bookclub_IMAGE
          readinessProbe:
            httpGet:
              port: 80
              path: "/api/internal/status"
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: '0.35' # Currently an empty small vpc with 1 cpu has 0.7 left. For rolling updates to work this needs to be half
              memory: '0.9G' # Currently an empty small vpc has 1.8G left.
